--- a/gb/23/10/2/n14086429.md
+++ b/gb/23/10/2/n14086429.md
@@ -1,62 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>波兰一教堂惊现1726年时间胶囊 或刷新纪录</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086454-muzeum-ziemi-wschowskiej-600x400.jpg" />
 <h6>波兰西部小镇弗斯霍瓦一座教堂最近进行整修时，工作人员意外在尖塔顶端发现了一个距今约300年的铜制时间胶囊。（Marcin Pechacz提供）
 </h6>
 <hr>
-	<p>【大纪元2023年10月02日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/researchers-find-worlds-oldest-time-capsule-from-1726-in-bulb-of-church-spire-heres-whats-inside-5500009">Michael Wing</a>报导／张雨霏编译）前不久，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0.md#1">波兰</a>西部一间<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">博物馆</a>对当地一座古老<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%99%E5%A0%82.md#1">教堂</a>进行翻修工程时，在尖塔顶端意外发现了一个据信已有近300年历史的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%B6%E9%97%B4%E8%83%B6%E5%9B%8A.md#1">时间胶囊</a>，里面存放着数枚古硬币以及用拉丁文书写的羊皮纸文件等<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E7%89%A9.md#1">文物</a>。这个胶囊有望改写纪录，成为世界上最古老的时间胶囊。</p>
-<p>弗斯霍瓦地区<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">博物馆</a>（Museum of Wschowa Land）日前宣布，该<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%B6%E9%97%B4%E8%83%B6%E5%9B%8A.md#1">时间胶囊</a>是在弗斯霍瓦镇圣斯坦尼斯洛斯<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%99%E5%A0%82.md#1">教堂</a>（Church of St. Stanislaus）顶部的圆形铜球装饰物内发现的，其历史可追溯至1726年，里面珍藏着四件标注着不同年份的包裹。</p>
-<figure id="attachment_14086456" aria-describedby="caption-attachment-14086456" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086456-muzeum-ziemi-wschowskiej-capsule.jpg"><img class=" wp-image-14086456" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086456-muzeum-ziemi-wschowskiej-capsule.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14086456" class="wp-caption-text">弗斯霍瓦地区博物馆工作人员与教堂顶部的圆形铜球装饰物合影。（Halina Drgas提供）</figcaption></figure>
-<figure id="attachment_14086454" aria-describedby="caption-attachment-14086454" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086454-muzeum-ziemi-wschowskiej.jpg"><img class=" wp-image-14086454" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086454-muzeum-ziemi-wschowskiej.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086454" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0.md#1">波兰</a>西部小镇弗斯霍瓦一座教堂出土了一个距今约300年的铜制时间胶囊。（Marcin Pechacz提供）</figcaption></figure>
+	<p>【大纪元2023年10月02日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/researchers-find-worlds-oldest-time-capsule-from-1726-in-bulb-of-church-spire-heres-whats-inside-5500009">Michael Wing</a>报导／张雨霏编译）前不久，波兰西部一间博物馆对当地一座古老教堂进行翻修工程时，在尖塔顶端意外发现了一个据信已有近300年历史的时间胶囊，里面存放着数枚古硬币以及用拉丁文书写的羊皮纸文件等文物。这个胶囊有望改写纪录，成为世界上最古老的时间胶囊。</p>
+<p>弗斯霍瓦地区博物馆（Museum of Wschowa Land）日前宣布，该时间胶囊是在弗斯霍瓦镇圣斯坦尼斯洛斯教堂（Church of St. Stanislaus）顶部的圆形铜球装饰物内发现的，其历史可追溯至1726年，里面珍藏着四件标注着不同年份的包裹。</p>
+<figure id="attachment_14086456" aria-describedby="caption-attachment-14086456" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086456-muzeum-ziemi-wschowskiej-capsule.jpg"><img decoding="async" class=" wp-image-14086456" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086456-muzeum-ziemi-wschowskiej-capsule.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14086456" class="wp-caption-text">弗斯霍瓦地区博物馆工作人员与教堂顶部的圆形铜球装饰物合影。（Halina Drgas提供）</figcaption></figure>
+<figure id="attachment_14086454" aria-describedby="caption-attachment-14086454" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086454-muzeum-ziemi-wschowskiej.jpg"><img decoding="async" class=" wp-image-14086454" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086454-muzeum-ziemi-wschowskiej.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086454" class="wp-caption-text">波兰西部小镇弗斯霍瓦一座教堂出土了一个距今约300年的铜制时间胶囊。（Marcin Pechacz提供）</figcaption></figure>
 <p>据了解，位于卢布斯卡省（Województwo lubuskie）的弗斯霍瓦镇在18世纪时曾是波兰的第二个非官方首都；在1793年这里曾被划为普鲁士王国的一部分，直到二战结束后才归还给波兰。这个小镇拥有许多重要的历史古迹。</p>
 <p>“我们于2023年6月22日在拆卸铜球并准备对其进行修缮时，偶然发现了这个时间胶囊，它本身是一个相对较大的铜制长方形盒子”，博物馆保护主管马尔辛?佩查兹（Marcin Pechacz）告诉《大纪元时报》，“这个发现物的年代以及里面丰富的内容物着实让我们惊讶不已。”</p>
 <p>据博物馆介绍，这个铜盒子已经严重腐蚀，盒盖上刻着醒目的、代表年份的1726四个数字。盒子并没有上锁，只是简单地用一个钩子钩着。它的右侧还附带着一个较小的铁皮盒子，上面饰有尖十字形图案。</p>
-<figure id="attachment_14086451" aria-describedby="caption-attachment-14086451" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086451-muzeum-ziemi-wschowskiej-museum.jpg"><img class=" wp-image-14086451" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086451-muzeum-ziemi-wschowskiej-museum.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086451" class="wp-caption-text">在包裹内发现的1726年的官方文件。（Marcin Pechacz提供）</figcaption></figure>
-<figure id="attachment_14086452" aria-describedby="caption-attachment-14086452" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086452-muzeum-ziemi-wschowskiej-oldest-capsule.jpg"><img class=" wp-image-14086452" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086452-muzeum-ziemi-wschowskiej-oldest-capsule.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086452" class="wp-caption-text">在包裹内发现的1786年的官方文件。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086451" aria-describedby="caption-attachment-14086451" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086451-muzeum-ziemi-wschowskiej-museum.jpg"><img decoding="async" class=" wp-image-14086451" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086451-muzeum-ziemi-wschowskiej-museum.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086451" class="wp-caption-text">在包裹内发现的1726年的官方文件。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086452" aria-describedby="caption-attachment-14086452" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086452-muzeum-ziemi-wschowskiej-oldest-capsule.jpg"><img decoding="async" class=" wp-image-14086452" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086452-muzeum-ziemi-wschowskiej-oldest-capsule.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086452" class="wp-caption-text">在包裹内发现的1786年的官方文件。（Marcin Pechacz提供）</figcaption></figure>
 <p>此外，在大的铜盒子上还印有多个追加的年份字样，包括印在底部的1786以及印在三个不同位置的1884，其中一个还印在了盒盖上，这些数字被认定为之前打开这个胶囊的时间。</p>
 <p>研究人员小心翼翼地将盒子打开，发现大盒子里面放了4个分别来自1726年、1786年、1884年和1914年的包裹，里面装有数份字体秀美但有些破损且带有官方圆形封印的羊皮纸文件和信件，另有两个来自1884年和1914年的圣物盒，其内容物是从圣约翰?内波穆克（St. John of Nepomuk）墓地中收集的土壤。</p>
-<figure id="attachment_14086453" aria-describedby="caption-attachment-14086453" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086453-muzeum-ziemi-wschowskiej-capsule.jpg"><img class=" wp-image-14086453" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086453-muzeum-ziemi-wschowskiej-capsule.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14086453" class="wp-caption-text">（左）在时间胶囊内发现了一封1786年的信件；（右）在时间胶囊内发现了一封1726年用拉丁文写的信件。（Marcin Pechacz提供）</figcaption></figure>
-<figure id="attachment_14086449" aria-describedby="caption-attachment-14086449" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086449-muzeum-ziemi-wschowskiej-1726-time-capsule.jpg"><img class=" wp-image-14086449" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086449-muzeum-ziemi-wschowskiej-1726-time-capsule.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086449" class="wp-caption-text">在时间胶囊内发现了一份1884年的报纸。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086453" aria-describedby="caption-attachment-14086453" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086453-muzeum-ziemi-wschowskiej-capsule.jpg"><img decoding="async" class=" wp-image-14086453" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086453-muzeum-ziemi-wschowskiej-capsule.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14086453" class="wp-caption-text">（左）在时间胶囊内发现了一封1786年的信件；（右）在时间胶囊内发现了一封1726年用拉丁文写的信件。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086449" aria-describedby="caption-attachment-14086449" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086449-muzeum-ziemi-wschowskiej-1726-time-capsule.jpg"><img decoding="async" class=" wp-image-14086449" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086449-muzeum-ziemi-wschowskiej-1726-time-capsule.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14086449" class="wp-caption-text">在时间胶囊内发现了一份1884年的报纸。（Marcin Pechacz提供）</figcaption></figure>
 <p>该博物馆表示，一次枪击事件似乎损坏了较大的铜盒及里面的部分文件，盒子底部被一颗小口径的铅弹击穿，并且这颗已变形的子弹一直留存在盒内。</p>
 <p>而旁边较小的铁盒里则放着两个包裹，里面分别装有一些可追溯至17世纪、用报纸包着的古硬币。据信，这些硬币于1884年被放入这个胶囊内。</p>
-<figure id="attachment_14086450" aria-describedby="caption-attachment-14086450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086450-muzeum-ziemi-wschowskiej-capsule-museum-1726.jpg"><img class=" wp-image-14086450" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086450-muzeum-ziemi-wschowskiej-capsule-museum-1726.jpg" alt="" width="600" b="228" /></a><figcaption id="caption-attachment-14086450" class="wp-caption-text">这些17世纪的硬币于1884年被放入时间胶囊内。（Marcin Pechacz提供）</figcaption></figure>
-<figure id="attachment_14086455" aria-describedby="caption-attachment-14086455" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086455-1726-muzeum-ziemi-wschowskiej.jpg"><img class=" wp-image-14086455" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086455-1726-muzeum-ziemi-wschowskiej.jpg" alt="" width="599" b="390" /></a><figcaption id="caption-attachment-14086455" class="wp-caption-text">在包裹中发现的宗教印刷品。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086450" aria-describedby="caption-attachment-14086450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086450-muzeum-ziemi-wschowskiej-capsule-museum-1726.jpg"><img decoding="async" class=" wp-image-14086450" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086450-muzeum-ziemi-wschowskiej-capsule-museum-1726.jpg" alt="" width="600" b="228" /></a><figcaption id="caption-attachment-14086450" class="wp-caption-text">这些17世纪的硬币于1884年被放入时间胶囊内。（Marcin Pechacz提供）</figcaption></figure>
+<figure id="attachment_14086455" aria-describedby="caption-attachment-14086455" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14086455-1726-muzeum-ziemi-wschowskiej.jpg"><img decoding="async" class=" wp-image-14086455" src="https://i.epochtimes.com/assets/uploads/2023/10/id14086455-1726-muzeum-ziemi-wschowskiej.jpg" alt="" width="599" b="390" /></a><figcaption id="caption-attachment-14086455" class="wp-caption-text">在包裹中发现的宗教印刷品。（Marcin Pechacz提供）</figcaption></figure>
 <p>目前，这个时间胶囊的确切年代尚未确定，如果证实其确实来自1726年，那么它将比2014年在美国波士顿麻萨诸塞州议会大厦的花岗岩地基下发现的胶囊还要古老。这个胶囊已被证实来自1795年，是目前已知世界上最古老的时间胶囊。</p>
-<p>弗斯霍瓦地区博物馆表示，现在工作人员正对这些新发现的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E7%89%A9.md#1">文物</a>开展保护及相关翻译工作， 一旦完成后，这个时间胶囊和里面的所有物品将成为弗斯霍瓦地区博物馆的永久藏品。与此同时，工作人员正在准备一个新的时间胶囊，将其放入圆形铜球后，再将它们一起吊回教堂的顶端。</p>
+<p>弗斯霍瓦地区博物馆表示，现在工作人员正对这些新发现的文物开展保护及相关翻译工作， 一旦完成后，这个时间胶囊和里面的所有物品将成为弗斯霍瓦地区博物馆的永久藏品。与此同时，工作人员正在准备一个新的时间胶囊，将其放入圆形铜球后，再将它们一起吊回教堂的顶端。◇</p>
 <p>责任编辑：高静#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/13/n13159276.md#1">美国工人拆旧教堂 在墙角发现百年时间胶囊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/6/n13989472.md#1">25年后打开母亲的时间胶囊 三胞胎落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012738.md#1">美一消防站拆除 意外发现1905年时间胶囊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066692.md#1">美国西点军校解封200年时间胶囊 结果意外</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/13/n13159276.md#1">美国工人拆旧教堂 在墙角发现百年时间胶囊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/6/n13989472.md#1">25年后打开母亲的时间胶囊 三胞胎落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/8/n14012738.md#1">美一消防站拆除 意外发现1905年时间胶囊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066692.md#1">美国西点军校解封200年时间胶囊 结果意外</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/18/n10153765.md#1" target="_blank">共产暴政录——消灭宗教</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081006.md#1">【人物真相】马斯克的“虎妈”和“犬子”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079824.md#1">中秋节：最接近仙界时空的节日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079576.md#1">中秋节祭月吃中秋月饼源于何时？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079473.md#1">拟古相思调 南朝才女鲍令晖的绝唱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083923.md#1">【未解之谜】墨西哥外星人事件大揭秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085783.md#1">【时事军事】美军继承A-10衣钵的深层问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14084953.md#1">【车评】摆脱充电的烦恼 2024 Mazda CX-90 3.3 Turbo S Premium Plus</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085391.md#1">【全球新闻】众院临时拨款法案被否决 政府关门危机迫近</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081646.md#1">两千年木乃伊在世界最古老的盐矿中保存完好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085314.md#1">岳山：习近平“十一”招待会严防暗杀？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084397.md#1">专家：中共垮台“大势如此 谁也动不了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/28/n14083697.md#1">陆歌手毛不易伤情恶化？被曝用筷子都成难题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084343.md#1">EXO灿烈举办粉丝演唱会 造访台北与香港等地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084197.md#1">73岁翁倩玉中秋访台 登玛菲司直播放送福利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085684.md#1">睽违9年开唱 林俊逸献唱经典向费玉清李玟致敬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084704.md#1">林志颖出车祸后暴瘦 录陆综三次高烧送医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084338.md#1">如何自我催眠以达成个人目标？ 专家分享秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080254.md#1">胃药久服增痴呆风险？吃胃药免伤身 专家有3建议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078572.md#1">2食材5步骤煮出日式高汤 鲜美滋味有诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078128.md#1">养好肠道菌防百病！益生菌专家教你1招补好菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083846.md#1">油品界的“红宝石”红棕榈油 营养丰富美颜养生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180510.md#1">【古韵流芳】李商隐叹相思 以无题诗道心曲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285314.md#1">沈舟：美军增派F-35到日本 中共难应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284584.md#1">持有多少现金储蓄最合适？专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285328.md#1">搭机长途旅行太累 如何挑选最舒服经济舱座位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284715.md#1">巨石强森为4岁临终粉丝献唱 录视频暖举获赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285313.md#1">汪明荃两度患癌 炎夏在冷气房穿冬装采排粤剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285219.md#1">只用微波炉 就能煮好玉米棒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/2/n14086429.htm">波兰一教堂惊现1726年时间胶囊 或刷新纪录</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086429.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/10/2/n14086429.htm">波兰一教堂惊现1726年时间胶囊 或刷新纪录</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/2/n14086429.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
